--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -1,23 +1,6 @@
-nav {
+.background {
     background-color: #75BCFF;
     color: white;
-    padding: 15px 5px;
-    margin-bottom: 1px;
+    padding-top: 10px;    
 }
 
-nav a {
-    background-color: #75BCFF;
-    color: white;
-    text-decoration: none;
-    padding: 5px;
-}
-
-nav a.active {
-    color: #282C34;
-}
-
-nav a:hover {
-    color: #1199ff;
-    background-color: white;
-    text-decoration: none;
-}
